# miniapp-benchmarking

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  input.json  main.cpp
src/: main.cpp  main.h
